# keypulse

./: LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
scripts/: ensure-macos-codesign-cert.sh  generate-icons.mjs  tauri-build.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
