[package]
name = "keypulse"
version = "0.1.0"
description = "Privacy-first keyboard activity dashboard"
authors = ["KeyPulse"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "keypulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-foundation = "0.10"
core-graphics = "0.25"
